--- a/MVC_TTCS/Web.config
+++ b/MVC_TTCS/Web.config
@@ -11,7 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MVC_TTCS-20220407040026.mdf;Initial Catalog=aspnet-MVC_TTCS-20220407040026;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataD
+         irectory|\aspnet-MVC_TTCS-20220407040026.mdf;Initial Catalog=aspnet-MVC_TTCS-20220407040026;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
